--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Directional Light (Cast Shadows) -->
     <a-light type="directional" position="1 3 2" intensity="1" castShadow="true"></a-light>
-    <a-light type="ambient" intensity="0.5"></a-light>
+    <a-light type="ambient" intensity="0.5" castShadow="true"></a-light>
 
     <!-- AR target and model -->
     <a-entity mindar-image-target="targetIndex: 0">
