--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
 </head>
 <body>
+  <a-scene render="shadowMap: true; shadowMapType: pcfsoft" shadow="type: pcfsoft">
   <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.1/examples/image-tracking/assets/card-example/card.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" shadow="type: pcfsoft" renderer="shadowMap: true">
     
     <a-assets>
@@ -16,8 +17,8 @@
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
     <!-- Directional Light (Cast Shadows) -->
-    <a-light type="directional" position="1 3 2" intensity="1" castShadow="true"></a-light>
-    <a-light type="ambient" intensity="0.5" castShadow="true"></a-light>
+    <a-light type="directional" position="1 3 2" intensity="2" castShadow="true"></a-light>
+    <a-light type="ambient" intensity="0.7" castShadow="true"></a-light>
 
     <!-- AR target and model -->
     <a-entity mindar-image-target="targetIndex: 0">
