--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
 </head>
 <body>
-  <a-scene render="shadowMap: true; shadowMapType: pcfsoft" shadow="type: pcfsoft">
-  <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.1/examples/image-tracking/assets/card-example/card.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" shadow="type: pcfsoft" renderer="shadowMap: true">
+  <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.1/examples/image-tracking/assets/card-example/card.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" renderer="shadowMap: true; shadowMapType: pcfsoft" shadow="type: pcfsoft">
     
     <a-assets>
       <a-asset-item id="ICHIGE_de_ASOBO_simple240916v2" src="ICHIGE_de_ASOBO_simple240916v2.glb"></a-asset-item>
