--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a-light type="ambient" intensity="0.7" castShadow="true"></a-light>
 
     <!-- AR target and model -->
+    <a-entity gltf-model="#glb" gltf_shadow></a-entity>
     <a-entity mindar-image-target="targetIndex: 0">
       <!-- GLTF Model casting shadow -->
       <a-gltf-model src="#ICHIGE_de_ASOBO_simple240916v2" rotation="90 0 0" position="0 0 0" scale="0.5 0.5 0.5" animation-mixer shadow="cast: true"></a-gltf-model>
