--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a-gltf-model src="#ICHIGE_de_ASOBO_simple240916v2" rotation="90 0 0" position="0 0 0" scale="0.5 0.5 0.5" animation-mixer shadow="cast: true"></a-gltf-model>
       
       <!-- Plane receiving shadow -->
-      <a-plane position="0 -0.1 0" rotation="0 0 0" width="1" height="1" color="#7BC8A4" shadow="receive: true"></a-plane>
+      <a-gltf-model src="#YUKA" rotation="90 0 0" position="0 0 0" scale="0.5 0.5 0.5" shadow="cast: true"></a-gltf-model>
     </a-entity>
 
   </a-scene>
